# mipt-deploy

./: .dockerignore  .gitignore  README.md  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml
data/raw/: .gitignore  telco-customer-churn-kaggle-dataset_2026-05-27.csv.dvc
docs/: 00-solution.md  01-problem.md  02-manifest.md  03-sli-slo.md
docs/adr/: 0001-record-architecture-decisions.md  0002-latency-improvements.md
infra/: .env.example  docker-compose.override.yml  docker-compose.yml
infra/dags/: churn_training_dag.py
infra/docker/: airflow.Dockerfile  ml_service.Dockerfile  mlflow.Dockerfile
infra/monitoring/grafana/dashboards/: model_quality.json  technical.json
infra/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infra/monitoring/prometheus/: prometheus.yml
infra/monitoring/prometheus/rules/: model.rules.yml  technical.rules.yml
infra/nginx/: proxy_common.conf
infra/nginx/conf.d/: default.conf
infra/sql/: init-db.sql
infra/terraform/: .gitignore  README.md  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
notebooks/: churn_predict_notebook.ipynb
src/ml_churn/: data.py  evaluate.py  feature_store.py  features.py  model.py  pipeline.py  registry.py  tracking.py  tune.py
src/ml_service/: app.py  config.py  features.py  metrics.py  model_loader.py  schemas.py
