[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ml-churn"
version = "0.1.0"
requires-python = ">=3.12"
# Core shared by both the training pipeline and the inference service.
dependencies = [
    "pandas",
    "scikit-learn",
    "mlflow",
    "lightgbm",
    "sqlalchemy",
    "psycopg2-binary",
]

[project.optional-dependencies]
train = [
    "optuna",
]
service = [
    "fastapi",
    "uvicorn[standard]",
    "prometheus-client",
]

[project.scripts]
churn-pipeline = "ml_churn.pipeline:main"
churn-service = "ml_service.app:main"